--- a/Unroll2/CJMAListTableViewCell.xib
+++ b/Unroll2/CJMAListTableViewCell.xib
@@ -1,66 +1,95 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="CJMAListTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="120" id="JU6-Y7-17b" customClass="CJMAListTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="399" height="120"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JU6-Y7-17b" id="xLu-ZS-UOY">
+                <rect key="frame" x="0.0" y="0.0" width="399" height="119.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="GJO-m8-lfF">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ijM-84-a9u">
+                        <rect key="frame" x="8" y="4" width="383" height="111.5"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3Ea-LQ-gIk">
-                                <rect key="frame" x="0.0" y="0.0" width="79.5" height="79.5"/>
-                                <color key="backgroundColor" red="0.61731698899999998" green="0.61731698899999998" blue="0.61731698899999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MXp-wq-ngo">
+                                <rect key="frame" x="119.5" y="31.5" width="43.5" height="20.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mAy-0B-PKL">
+                                <rect key="frame" x="119.5" y="60" width="38" height="18"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Iu-Kf-hTW">
+                                <rect key="frame" x="119.5" y="52" width="44" height="8"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="3Ea-LQ-gIk" secondAttribute="height" multiplier="1:1" id="CQa-0Q-w2J"/>
+                                    <constraint firstAttribute="width" constant="44" id="WtD-am-JOp"/>
+                                    <constraint firstAttribute="height" constant="8" id="Xgd-dV-ow5"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cD6-AJ-bRt">
+                                <rect key="frame" x="345" y="41" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="Gxj-GG-rFi"/>
+                                    <constraint firstAttribute="height" constant="30" id="NlV-pE-Sg8"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="DetailDisclosure"/>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1bo-Xa-bZo">
+                                <rect key="frame" x="0.0" y="0.0" width="111.5" height="111.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="1bo-Xa-bZo" secondAttribute="height" multiplier="1:1" id="2A4-L7-W3Y"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ghh-1p-QVs">
-                                <rect key="frame" x="87.5" y="0.0" width="232.5" height="79.5"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="poG-t3-0wR">
-                                        <rect key="frame" x="0.0" y="0.0" width="43.5" height="49.5"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6my-MZ-Bb1">
-                                        <rect key="frame" x="0.0" y="30.5" width="37.5" height="49"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
                         </subviews>
-                    </stackView>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="2Iu-Kf-hTW" firstAttribute="top" secondItem="MXp-wq-ngo" secondAttribute="bottom" id="9y9-tt-1bp"/>
+                            <constraint firstItem="cD6-AJ-bRt" firstAttribute="centerY" secondItem="ijM-84-a9u" secondAttribute="centerY" id="BpC-rv-dPi"/>
+                            <constraint firstItem="cD6-AJ-bRt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="MXp-wq-ngo" secondAttribute="trailing" constant="8" id="ClS-OA-BxX"/>
+                            <constraint firstItem="mAy-0B-PKL" firstAttribute="leading" secondItem="2Iu-Kf-hTW" secondAttribute="leading" id="E32-sQ-uI9"/>
+                            <constraint firstItem="2Iu-Kf-hTW" firstAttribute="leading" secondItem="1bo-Xa-bZo" secondAttribute="trailing" constant="8" id="ESp-AV-mkU"/>
+                            <constraint firstItem="1bo-Xa-bZo" firstAttribute="top" secondItem="ijM-84-a9u" secondAttribute="top" id="Pni-K2-cm4"/>
+                            <constraint firstAttribute="trailing" secondItem="cD6-AJ-bRt" secondAttribute="trailing" constant="8" id="T5f-xa-Uv7"/>
+                            <constraint firstItem="mAy-0B-PKL" firstAttribute="top" secondItem="2Iu-Kf-hTW" secondAttribute="bottom" id="fDN-Fc-41L"/>
+                            <constraint firstItem="2Iu-Kf-hTW" firstAttribute="centerY" secondItem="1bo-Xa-bZo" secondAttribute="centerY" id="gQm-ZR-ZuH"/>
+                            <constraint firstItem="MXp-wq-ngo" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ijM-84-a9u" secondAttribute="top" constant="8" id="iAP-NO-70z"/>
+                            <constraint firstAttribute="bottom" secondItem="1bo-Xa-bZo" secondAttribute="bottom" id="pV9-2Y-niY"/>
+                            <constraint firstItem="MXp-wq-ngo" firstAttribute="leading" secondItem="2Iu-Kf-hTW" secondAttribute="leading" id="tma-rk-4F1"/>
+                            <constraint firstItem="1bo-Xa-bZo" firstAttribute="leading" secondItem="ijM-84-a9u" secondAttribute="leading" id="yVg-8J-aCj"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="GJO-m8-lfF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="34s-aS-EKT"/>
-                    <constraint firstAttribute="bottom" secondItem="GJO-m8-lfF" secondAttribute="bottom" id="FXG-2G-Emu"/>
-                    <constraint firstItem="GJO-m8-lfF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="f4w-pU-EuY"/>
-                    <constraint firstAttribute="trailing" secondItem="GJO-m8-lfF" secondAttribute="trailing" id="j49-SY-NHZ"/>
+                    <constraint firstAttribute="bottom" secondItem="ijM-84-a9u" secondAttribute="bottom" constant="4" id="3xG-LZ-dAU"/>
+                    <constraint firstItem="ijM-84-a9u" firstAttribute="top" secondItem="xLu-ZS-UOY" secondAttribute="top" constant="4" id="5EM-1n-ycL"/>
+                    <constraint firstAttribute="trailing" secondItem="ijM-84-a9u" secondAttribute="trailing" constant="8" id="6op-B9-fJB"/>
+                    <constraint firstItem="ijM-84-a9u" firstAttribute="leading" secondItem="xLu-ZS-UOY" secondAttribute="leading" constant="8" id="fOv-8a-8j1"/>
                 </constraints>
             </tableViewCellContentView>
-            <inset key="separatorInset" minX="80" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
-                <outlet property="cellAlbumCount" destination="6my-MZ-Bb1" id="GzF-Mj-DaC"/>
-                <outlet property="cellAlbumName" destination="poG-t3-0wR" id="Fso-nK-fRa"/>
-                <outlet property="cellThumbnail" destination="3Ea-LQ-gIk" id="zNY-rY-oHi"/>
+                <outlet property="cellAlbumCount" destination="mAy-0B-PKL" id="dSU-At-ncz"/>
+                <outlet property="cellAlbumName" destination="MXp-wq-ngo" id="FUo-Wf-mTJ"/>
+                <outlet property="cellThumbnail" destination="1bo-Xa-bZo" id="yyW-yB-go8"/>
+                <outlet property="subContentView" destination="ijM-84-a9u" id="e6f-53-Xl2"/>
             </connections>
-            <point key="canvasLocation" x="280" y="373"/>
+            <point key="canvasLocation" x="216.66666666666669" y="91.741071428571431"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="DetailDisclosure" width="22" height="22"/>
+    </resources>
 </document>
