--- a/Unroll2/CJMAListTableViewCell.xib
+++ b/Unroll2/CJMAListTableViewCell.xib
@@ -21,27 +21,14 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ijM-84-a9u">
                         <rect key="frame" x="8" y="4" width="383" height="111.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MXp-wq-ngo">
-                                <rect key="frame" x="119.5" y="31.5" width="43.5" height="20.5"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MXp-wq-ngo">
+                                <rect key="frame" x="127.5" y="0.0" width="48" height="111.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mAy-0B-PKL">
-                                <rect key="frame" x="119.5" y="60" width="38" height="18"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Iu-Kf-hTW">
-                                <rect key="frame" x="119.5" y="52" width="44" height="8"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="44" id="WtD-am-JOp"/>
-                                    <constraint firstAttribute="height" constant="8" id="Xgd-dV-ow5"/>
-                                </constraints>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cD6-AJ-bRt">
-                                <rect key="frame" x="345" y="41" width="30" height="30"/>
+                                <rect key="frame" x="345" y="8" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="Gxj-GG-rFi"/>
                                     <constraint firstAttribute="height" constant="30" id="NlV-pE-Sg8"/>
@@ -57,18 +44,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="2Iu-Kf-hTW" firstAttribute="top" secondItem="MXp-wq-ngo" secondAttribute="bottom" id="9y9-tt-1bp"/>
-                            <constraint firstItem="cD6-AJ-bRt" firstAttribute="centerY" secondItem="ijM-84-a9u" secondAttribute="centerY" id="BpC-rv-dPi"/>
-                            <constraint firstItem="cD6-AJ-bRt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="MXp-wq-ngo" secondAttribute="trailing" constant="8" id="ClS-OA-BxX"/>
-                            <constraint firstItem="mAy-0B-PKL" firstAttribute="leading" secondItem="2Iu-Kf-hTW" secondAttribute="leading" id="E32-sQ-uI9"/>
-                            <constraint firstItem="2Iu-Kf-hTW" firstAttribute="leading" secondItem="1bo-Xa-bZo" secondAttribute="trailing" constant="8" id="ESp-AV-mkU"/>
+                            <constraint firstItem="cD6-AJ-bRt" firstAttribute="top" secondItem="ijM-84-a9u" secondAttribute="top" constant="8" id="0z6-X3-ppK"/>
+                            <constraint firstItem="MXp-wq-ngo" firstAttribute="bottom" secondItem="1bo-Xa-bZo" secondAttribute="bottom" id="6nf-Ar-5wd"/>
+                            <constraint firstItem="cD6-AJ-bRt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="MXp-wq-ngo" secondAttribute="trailing" constant="8" id="FaZ-Im-ukE"/>
+                            <constraint firstItem="MXp-wq-ngo" firstAttribute="leading" secondItem="1bo-Xa-bZo" secondAttribute="trailing" constant="16" id="NLv-rl-ell"/>
                             <constraint firstItem="1bo-Xa-bZo" firstAttribute="top" secondItem="ijM-84-a9u" secondAttribute="top" id="Pni-K2-cm4"/>
                             <constraint firstAttribute="trailing" secondItem="cD6-AJ-bRt" secondAttribute="trailing" constant="8" id="T5f-xa-Uv7"/>
-                            <constraint firstItem="mAy-0B-PKL" firstAttribute="top" secondItem="2Iu-Kf-hTW" secondAttribute="bottom" id="fDN-Fc-41L"/>
-                            <constraint firstItem="2Iu-Kf-hTW" firstAttribute="centerY" secondItem="1bo-Xa-bZo" secondAttribute="centerY" id="gQm-ZR-ZuH"/>
-                            <constraint firstItem="MXp-wq-ngo" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ijM-84-a9u" secondAttribute="top" constant="8" id="iAP-NO-70z"/>
+                            <constraint firstItem="MXp-wq-ngo" firstAttribute="top" secondItem="1bo-Xa-bZo" secondAttribute="top" id="WGs-he-CB7"/>
+                            <constraint firstItem="MXp-wq-ngo" firstAttribute="centerY" secondItem="1bo-Xa-bZo" secondAttribute="centerY" id="foQ-3d-tPp"/>
                             <constraint firstAttribute="bottom" secondItem="1bo-Xa-bZo" secondAttribute="bottom" id="pV9-2Y-niY"/>
-                            <constraint firstItem="MXp-wq-ngo" firstAttribute="leading" secondItem="2Iu-Kf-hTW" secondAttribute="leading" id="tma-rk-4F1"/>
                             <constraint firstItem="1bo-Xa-bZo" firstAttribute="leading" secondItem="ijM-84-a9u" secondAttribute="leading" id="yVg-8J-aCj"/>
                         </constraints>
                     </view>
@@ -81,7 +65,6 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="cellAlbumCount" destination="mAy-0B-PKL" id="dSU-At-ncz"/>
                 <outlet property="cellAlbumName" destination="MXp-wq-ngo" id="FUo-Wf-mTJ"/>
                 <outlet property="cellThumbnail" destination="1bo-Xa-bZo" id="yyW-yB-go8"/>
                 <outlet property="subContentView" destination="ijM-84-a9u" id="e6f-53-Xl2"/>
