completed CJMAlistTAbleViewCell -> PHNAlbumListTableViewCell migration. Begin CJMPopoverViewController -> PHNPopoverViewController migration.

--- a/Unroll2/PHNAlbumListTableViewCell.xib
+++ b/Unroll2/PHNAlbumListTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="120" id="JU6-Y7-17b" customClass="CJMAListTableViewCell">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AlbumCell" rowHeight="120" id="JU6-Y7-17b" customClass="PHNAlbumListTableViewCell" customModule="Unroll2" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="399" height="120"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JU6-Y7-17b" id="xLu-ZS-UOY">
